210401 TCL 관련 개념 정리하기

--- a/SQL_210401(TCL).ipynb
+++ b/SQL_210401(TCL).ipynb
@@ -88,15 +88,8 @@
     "\n",
     "ROLLBACK TRANSACTION 세이브포인트이름;\n",
     "\n",
-    "✅ SQL SERVER는 \n"
+    "✅ SQL SERVER는 기본적으로 AUTO COMMIT 이지만, 어플리케이션의 이상 종료 발생시에는 COMMIT되지 않고 ROLLBACK된다.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
